--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Tailwindcss and Fonts -->
-    <link rel="stylesheet" href="stylesheets/tailwind.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -124,7 +124,8 @@
                 py-2
                 text-xl
                 border border-purple-200
-                mt-6 mb-10
+                mt-6
+                mb-10
                 shadow
                 rounded
                 hover:shadow-xl
@@ -137,6 +138,6 @@
       </div>
     </main>
     <!-- Custom js -->
-    <script src="scripts/main.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
